@@ -1,10 +1,7 @@
 package com.fanta.newspriborzhavalyceum.database.entity;
 
 import jakarta.persistence.*;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -15,13 +12,13 @@ import javax.persistence.SequenceGenerator;
 import java.sql.Date;
 import java.time.LocalDate;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 
-@Getter
-@Setter
-@EqualsAndHashCode
+@Data
+@Builder
 @NoArgsConstructor
+@AllArgsConstructor
 @Entity
 @Table(name = "users")
 public class User implements UserDetails {
@@ -34,7 +31,7 @@ public class User implements UserDetails {
     @GeneratedValue(
             strategy = GenerationType.SEQUENCE,
             generator = "user_sequence")
-    private Long id;
+    private Integer id;
 
     @Column(name = "name", nullable = false, length = 100)
     private String name;
@@ -46,8 +43,8 @@ public class User implements UserDetails {
     private String password;
 
     @Enumerated(EnumType.STRING)
-    @Column(name = "role_id", nullable = false)
-    private Role role;
+    @Column(name = "role", nullable = false)
+    private Role role = Role.admin;
 
     @Column(name = "date_of_birth")
     private Date dateOfBirth = Date.valueOf(LocalDate.of(2024, 4, 7));
@@ -55,45 +52,33 @@ public class User implements UserDetails {
     private Boolean locked;
     private Boolean enable;
 
-    public User(Long id, String name, String email, String password, Role role, Date dateOfBirth, Boolean locked, Boolean enable) {
-        this.id = id;
-        this.name = name;
-        this.email = email;
-        this.password = password;
-        this.role = role;
-        this.dateOfBirth = dateOfBirth;
-        this.locked = locked;
-        this.enable = enable;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role.name());
-        return Collections.singletonList(authority);
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
     public String getUsername() {
-        return null;
+        return email;
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return false;
+        return true;
     }
 }
